<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">聚合影视大全</string>
    <string name="shopping">疯抢榜</string>

    <string name="home">首页</string>
    <string name="class_video">分类</string>
    <string name="user">我的</string>


    <string name="ssyp">搜索影片</string>
    <string name="_1">1%</string>
    <string name="txwx">填写微信号</string>
    <string name="scrwm">上传二维码</string>
    <string name="wddhm">我的兑换码</string>
    <string name="shengchengdhm">生成兑换码</string>
    <string name="fz">复制</string>
    <string name="fxxzdz">分享下载地址</string>
    <string name="xqtghb">选取推广海报</string>
    <string name="bgsj">绑定手机</string>
    <string name="zdl">知道啦</string>
    <string name="nhbsvip">您还不是VIP无法观看</string>
    <string name="fxhyhqvip">分享好友获取VIP</string>
    <string name="dhm">兑换码</string>
    <string name="lqvip">领取VIP</string>
    <string name="tcdl">退出登录</string>
    <string name="fxdwx">分享到微信</string>
    <string name="wxhy">微信好友</string>
    <string name="pyq">朋友圈</string>
    <string name="qx">取消</string>
    <string name="hijwwx">Hi~,加我微信</string>
    <string name="mflqvipdhm">免费领取VIP兑换码，即可免费观看全网VIP付费视频~快来领取吧。</string>
    <string name="xzxhhb">选择喜欢的海报</string>
    <string name="ljbc">立即保存</string>
    <string name="txdjljbc">提示：点击立即保存，即可保存到系统相册</string>
    <string name="fxdpyqcngkgyp">分享到朋友圈才能观看该影片</string>
    <string name="ljfxzpyq">立即分享至朋友圈</string>
    <string name="xzz" tools:keep="@string/xzz">下载中</string>
    <string name="vipsc">VIP时长:</string>
    <string name="dl">登录</string>
    <string name="wxdl">微信登录</string>
    <string name="qwvipspmfk">·全网vip视频免费看</string>
    <string name="zhkddyhj">   ·最好看电影集合</string>
    <string name="dy">导语</string>
    <string name="kg">\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t</string>
    <string name="ss">搜索</string>
    <string name="ljgusq">领劵购物省钱</string>
    <string name="fh">返回</string>
    <string name="hyqmdjy">欢迎亲们的建议，我们的进步离不开你们的支持</string>
    <string name="lxfswxqq">联系方式(微信或QQ)</string>
    <string name="fknr">反馈内容</string>
    <string name="tj">提交</string>
    <string name="ljjh">立即激活</string>
    <string name="qsrddh" tools:keep="@string/qsrddh">请输入订单号</string>
    <string name="qd">确定</string>
    <string name="ljlq">立即领取</string>
    <string name="yqlwc">已清理完成</string>
    <string name="bdsj">绑定手机</string>
    <string name="sjh">手机号</string>
    <string name="txndsjh">填写您的手机号</string>
    <string name="hqyzm">获取验证码</string>
    <string name="yzm">验证码</string>
    <string name="txndyzm">填写您的验证码</string>
    <string name="xyb">下一步</string>
    <string name="qpsb">请求失败，请稍后再试</string>
    <string name="gxsb">更新失败，请重新下载安装</string>
    <string name="nqcg">领取成功</string>
    <string name="ncwdlsfxzdl">您尚未登录是否现在登录?</string>
    <string name="ztxq">专题详情</string>
    <string name="fx">分享</string>
    <string name="gywm">关于我们</string>
    <string name="bbh">版本号：</string>
    <string name="scdhm">生成兑换码</string>
    <string name="qtxwxh">请填写微信号</string>
    <string name="qscrwm">请上传二维码</string>
    <string name="hz">复制</string>
    <string name="dhmyscqwcfsc">兑换码已生成，请勿重复生成</string>
    <string name="yhz">已复制</string>
    <string name="qxscdhm">请先生成兑换码</string>
    <string name="fxd">分享到</string>
    <string name="qsrsjh">请输入手机号</string>
    <string name="qsrzqsjh">请输入正确的手机号</string>
    <string name="qsryzm">请输入验证码</string>
    <string name="fscg">发送成功！</string>
    <string name="bdcg">绑定成功！</string>
    <string name="m">秒</string>
    <string name="jyfk">建议反馈</string>
    <string name="qsrlxfs">请输入联系方式</string>
    <string name="qsrfklr">请输入反馈内容</string>
    <string name="fkcg">反馈成功</string>
    <string name="scz">生成中…</string>
    <string name="hbzzgldlsqshzs">海报正在赶来的路上，请返回后再试</string>
    <string name="hbybczxc">海报以保存至相册~</string>
    <string name="byyqxhbjwfbczxc">不同意权限，海报将无法保存至相册</string>
    <string name="ty">同意</string>
    <string name="hbybczrjml">海报以保存在软件目录</string>
    <string name="tpdz">图片地址：</string>
    <string name="gb">关闭</string>
    <string name="bty">不同意</string>
    <string name="qkhc">清空缓存</string>
    <string name="jxgx">检查更新</string>
    <string name="cjwt">常见问题</string>
    <string name="dianying">电影</string>
    <string name="djj">电视剧</string>
    <string name="dm">动漫</string>
    <string name="zy">综艺</string>
    <string name="dlsb">登录失败</string>
    <string name="dlsbqshcs">登录失败,请稍后重试</string>
    <string name="fxyj">分享有奖</string>
    <string name="ndtklqshcs">你点太快了，请稍后再试</string>
    <string name="hqvip">获取VIP</string>
    <string name="hyzx">会员中心</string>
    <string name="txdy">推荐电影</string>
    <string name="jqjs">剧情介绍</string>
    <string name="jj">剧集</string>
    <string name="qhxl">切换线路</string>
    <string name="ljfx">立即分享</string>
    <string name="_7_vip">该影片需要分享后才可看\n分享后可得天VIP</string>
    <string name="fxzwxq">分享至微信群</string>
    <string name="fxzpyq">分享至朋友圈</string>
</resources>
