<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            android:id="@+id/title"
            layout="@layout/app_title" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_16"
            android:paddingStart="@dimen/dp_16"
            android:text="@string/hyqmdjy"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/phone_or_qq"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="@dimen/dp_16"
            android:background="@drawable/bg_hui_yuan"
            android:hint="@string/lxfswxqq"
            android:paddingStart="@dimen/dp_16"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_16"
            android:background="@drawable/bg_hui_yuan"
            android:gravity="top"
            android:hint="@string/fknr"
            android:maxLength="500"
            android:minHeight="@dimen/dp_100"
            android:paddingStart="@dimen/dp_16"
            android:paddingTop="@dimen/dp_16"
            tools:ignore="RtlSymmetry"
            android:paddingLeft="@dimen/dp_16" />

        <TextView
            android:id="@+id/tv_submit"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="@dimen/dp_16"
            android:background="@drawable/bg_bule_fillet"
            android:gravity="center"
            android:text="@string/tj"
            android:textColor="@color/white"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="@dimen/dp_16" />





    </LinearLayout>
</layout>