<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transparent"
        android:gravity="bottom"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_16"
            android:layout_marginRight="@dimen/dp_16"
            android:background="@drawable/bg_white_fillet"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/dp_8"
                android:layout_marginTop="@dimen/dp_8"
                android:text="@string/fxdwx"
                android:textColor="#77333333"
                android:textSize="14sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="#20999999" />



                <TextView
                    android:id="@+id/lay_we_chat"
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/bg_click_gray"
                    android:gravity="center"
                    android:padding="@dimen/dp_4"
                    android:text="@string/wxhy"
                    android:textColor="@color/app_blue"
                    android:textSize="16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="#20999999" />


            <TextView
                android:id="@+id/lay_we_fz"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:background="@drawable/bg_click_dialog_lift_and_rigth_gray"
                android:gravity="center"
                android:padding="@dimen/dp_4"
                android:text="@string/pyq"
                android:textColor="@color/app_blue"
                android:textSize="16sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginBottom="@dimen/dp_16"
            android:layout_marginLeft="@dimen/dp_16"
            android:layout_marginRight="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_16"
            android:background="@drawable/bg_click_withe_frame"
            android:gravity="center"
            android:padding="@dimen/dp_4"
            android:text="@string/qx"
            android:textColor="@color/app_blue"
            android:textSize="16sp">

        </TextView>
    </LinearLayout>
</layout>