<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="@dimen/dp_50"
            android:gravity="center|left"
            android:paddingLeft="@dimen/dp_16"
            android:text="@string/bdsj"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_18"
            tools:ignore="RtlHardcoded,RtlSymmetry" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="50dp"
                android:orientation="horizontal">


                <TextView
                    android:layout_width="@dimen/dp_80"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:gravity="center|left"
                    android:paddingLeft="@dimen/dp_16"
                    android:paddingStart="@dimen/dp_16"
                    android:text="@string/sjh"
                    android:textColor="@color/txt_black"
                    android:textSize="16sp" />

                <include
                    layout="@layout/line_h"
                    android:layout_width="0.5dp"
                    android:layout_height="@dimen/dp_30"
                    android:layout_gravity="center" />

                <EditText
                    android:id="@+id/tv_phone"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="@string/txndsjh"
                    android:inputType="phone"
                    android:maxLength="11"
                    android:paddingLeft="@dimen/dp_8"
                    android:paddingStart="@dimen/dp_8"
                    android:textSize="16sp"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:id="@+id/tv_send_code"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_marginEnd="@dimen/dp_16"
                    android:layout_marginRight="@dimen/dp_16"
                    android:background="@drawable/bg_bule"
                    android:gravity="center"
                    android:paddingLeft="@dimen/dp_16"
                    android:paddingRight="@dimen/dp_16"
                    android:text="@string/hqyzm"
                    android:textColor="@color/white" />
            </LinearLayout>


            <include
                layout="@layout/line_w"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/dp_16"
                android:layout_marginRight="@dimen/dp_16" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="@dimen/dp_80"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:gravity="left|center"
                    android:paddingLeft="@dimen/dp_16"
                    android:paddingStart="@dimen/dp_16"
                    android:text="@string/yzm"
                    android:textColor="@color/txt_black"
                    android:textSize="16sp"
                    tools:ignore="RtlSymmetry" />

                <include
                    layout="@layout/line_h"
                    android:layout_width="0.5dp"
                    android:layout_height="@dimen/dp_30"
                    android:layout_gravity="center" />

                <EditText
                    android:id="@+id/tv_code"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="@string/txndyzm"
                    android:inputType="number"
                    android:maxLength="6"
                    android:paddingStart="@dimen/dp_8"
                    android:textSize="16sp" />
            </LinearLayout>

            <include
                layout="@layout/line_w"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/dp_16"
                android:layout_marginRight="@dimen/dp_16" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="@dimen/dp_80"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:gravity="left|center"
                    android:paddingLeft="@dimen/dp_16"
                    android:paddingStart="@dimen/dp_16"
                    android:text="密码"
                    android:textColor="@color/txt_black"
                    android:textSize="16sp"
                    tools:ignore="RtlSymmetry" />

                <include
                    layout="@layout/line_h"
                    android:layout_width="0.5dp"
                    android:layout_height="@dimen/dp_30"
                    android:layout_gravity="center" />

                <EditText
                    android:id="@+id/tv_password"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="请填写您的密码"
                    android:maxLength="16"
                    android:paddingStart="@dimen/dp_8"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/tv_submit"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_margin="@dimen/dp_16"
            android:background="@drawable/bg_hui_yuan"
            android:gravity="center"
            android:text="@string/xyb"
            android:textColor="@color/white" />
    </LinearLayout>
</layout>