<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            android:id="@+id/title"
            layout="@layout/app_title" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/dp_16">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_44"
                android:background="@drawable/bg_click_withe_frame"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/dp_16"
                    android:text="@string/txwx"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    tools:ignore="RtlSymmetry" />

                <EditText
                    android:id="@+id/ed_wx_num"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_44"
                    android:background="@null"
                    android:gravity="right|center"
                    android:maxLength="20"
                    android:maxLines="1"
                    android:paddingRight="@dimen/dp_16"
                    android:textSize="16sp"
                    tools:ignore="LabelFor,RtlHardcoded,RtlSymmetry"
                    android:inputType="text" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/lay_update_qr_img"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_44"
                android:layout_marginTop="@dimen/dp_16"
                android:background="@drawable/bg_click_withe_frame"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center|left"
                    android:paddingLeft="@dimen/dp_16"
                    android:text="@string/scrwm"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    tools:ignore="RtlHardcoded,RtlSymmetry" />

                <android.support.v7.widget.AppCompatImageView
                    android:id="@+id/img_qr"
                    android:layout_width="44dp"
                    android:layout_height="@dimen/dp_44"
                    android:background="@null"
                    android:gravity="right|center"
                    android:maxLength="20"
                    android:paddingRight="@dimen/dp_16"
                    android:textSize="16sp"
                    tools:ignore="RtlHardcoded,RtlSymmetry" />

                <android.support.v7.widget.AppCompatImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:layout_marginEnd="@dimen/dp_16"
                    android:src="@drawable/ic_right_gray" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_16"
                android:background="@drawable/bg_click_withe_frame"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:background="@drawable/bg_click_withe_frame"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:paddingStart="@dimen/dp_16"
                        android:text="@string/wddhm"
                        android:textColor="@color/black"
                        tools:ignore="RtlSymmetry" />

                    <TextView
                        android:id="@+id/shenchen_code"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:layout_marginEnd="@dimen/dp_16"
                        android:background="@drawable/bg_bule_fillet"
                        android:gravity="center_vertical"
                        android:paddingLeft="@dimen/dp_16"
                        android:paddingRight="@dimen/dp_16"
                        android:text="@string/shengchengdhm"
                        android:textColor="@color/white" />
                </LinearLayout>

                <include layout="@layout/line_w" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:background="@drawable/bg_click_withe_frame"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/my_code"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:paddingStart="@dimen/dp_16"
                        tools:ignore="RtlSymmetry" />

                    <TextView
                        android:id="@+id/copy"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:layout_marginEnd="@dimen/dp_16"
                        android:background="@drawable/bg_green_fillet"
                        android:gravity="center_vertical"
                        android:paddingLeft="@dimen/dp_16"
                        android:paddingRight="@dimen/dp_16"
                        android:text="@string/fz"
                        android:textColor="@color/white" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/tv_submit"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_44"
                android:layout_marginTop="@dimen/dp_16"
                android:background="@drawable/bg_bule_fillet"
                android:gravity="center"
                android:text="@string/xqtghb"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/tv_share_app_uri"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_44"
                android:layout_marginTop="@dimen/dp_16"
                android:background="@drawable/bg_green_fillet"
                android:gravity="center"
                android:text="@string/fxxzdz"
                android:visibility="gone"
                android:textColor="@color/white" />


        </LinearLayout>


    </LinearLayout>
</layout>