<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/item"
            layout="@layout/selection_poster_activity_item" />

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/hui" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include
                android:id="@+id/title"
                layout="@layout/app_title" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:clipChildren="false"
                android:paddingTop="@dimen/dp_8">


                <android.support.v4.view.ViewPager
                    android:id="@+id/view_pager"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:clipChildren="false" />

            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_8"
                android:background="@color/white"
                android:orientation="vertical"
                android:padding="@dimen/dp_8"
                android:visibility="visible">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center"
                    android:text="@string/xzxhhb"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/ok"
                    android:layout_width="match_parent"
                    android:layout_height="36dp"
                    android:layout_marginTop="@dimen/dp_8"
                    android:background="@drawable/bg_bule_fillet"
                    android:gravity="center"
                    android:text="@string/ljbc"
                    android:textColor="@color/white" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="@dimen/dp_8"
                    android:gravity="center"
                    android:text="@string/txdjljbc"
                    android:textColor="@color/txt_black" />

            </LinearLayout>
        </LinearLayout>
    </FrameLayout>
</layout>