<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@color/app_blue">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="14dp"
                android:ellipsize="end"
                android:gravity="center"
                android:maxLength="10"
                android:text="@string/ljgusq"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent" />

            <TextView
                android:id="@+id/sousuo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/bg_click_gray"
                android:padding="@dimen/dp_8"
                android:text="@string/ss"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/textView"
                android:layout_marginRight="8dp" />

            <TextView
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"

                android:layout_marginStart="8dp"
                android:background="@drawable/bg_click_gray"
                android:padding="@dimen/dp_8"
                android:text="@string/fh"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="8dp" />
        </android.support.constraint.ConstraintLayout>

        <com.scwang.smartrefresh.layout.SmartRefreshLayout
            android:id="@+id/smart_refresh_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <WebView
                    android:id="@+id/web"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <TextView
                    android:id="@+id/tv_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/bg_hui_yuan"
                    android:padding="@dimen/dp_16"
                    android:textColor="@color/txt_black"
                    android:textSize="@dimen/sp_18" />
            </FrameLayout>


        </com.scwang.smartrefresh.layout.SmartRefreshLayout>
    </LinearLayout>
</layout>